Fix bug not responsive blog layout

--- a/static/blog.css
+++ b/static/blog.css
@@ -200,7 +200,7 @@ a {
 
 /* ############################################### */
 
-@media (max-width: 768px) {
+@media screen and (max-width: 960px) { /* width at which layout changes  */
 
     .menu-container {
         width: 90%;
